<resources>
    <string name="app_name">2 Cards</string>
    <string name="action_settings">Settings</string>
    <string name="player_mode"><u>Player Mode</u></string>
    <string name="settings_string"><u>Set Volume</u></string>

    <string name="one_board">1 Board</string>
    <string name="two_board">2 Board</string>
    <string name="title_activity_summary">Summary</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_game_summary">GameSummary</string>


    <!-- Test Banner :-->
    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <string name="banner_ad_unit_id">ca-app-pub-4622920858510017/2260873283</string>

    <string name="bullet_dot">●</string>
    <string name="one_board_game">One board game</string>
    <string name="one_board_help_text">All the card pairs are present on same board</string>
    <string name="ok">OK</string>
    <string name="two_board_game">Two board game</string>
    <string name="two_board_help_text">Matching pair is present on other board</string>
    <string name="both_scroll">Both Scroll</string>
    <string name="both_scroll_help_text_1">Display size is less than actual number of cards on board</string>
    <string name="both_scroll_help_text_2">Extra rows and columns are present</string>
    <string name="both_scroll_help_text_3">Both rows and columns are scrollable</string>
    <string name="horizontal_scroll">Horizontal Scroll</string>
    <string name="horizontal_scroll_board">Horizontal Scroll board</string>
    <string name="horizontal_scroll_help_text_2">More columns are present than displayed</string>
    <string name="horizontal_scroll_help_text_3">Extra columns are scrollable</string>
    <string name="no_scroll">No Scroll</string>
    <string name="no_scroll_effect">No Scroll Effect</string>
    <string name="vertical_scroll">Vertical Scroll</string>
    <string name="vertical_scroll_board">Vertical Scroll board</string>
    <string name="vertical_scroll_help_text_2">More rows are present than displayed</string>
    <string name="vertical_scroll_help_text_3">Extra rows are scrollable</string>
    <string name="yay">Yay!</string>
    <string name="moves_limit">Moves limit : </string>
    <string name="moves_made">Moves made : </string>
    <string name="restart">Restart</string>
    <string name="summary">Summary</string>
    <string name="you_win">You win!</string>
    <string name="score">Score : </string>
    <string name="top_score">Top Score : </string>
    <string name="challenge_summary">Challenge summary: </string>
    <string name="reward">Reward : </string>
    <string name="get_ad_free_version">Get Ad-free version</string>
    <string name="remove_these_annoying_things_now">Remove these annoying things now!</string>
    <string name="at_just_45_inr">At just 45 INR!</string>
    <string name="remove_ads">Remove ads</string>
    <string name="continue_playing_with_ads">Continue playing free version with ads</string>
    <string name="arcade">Arcade</string>
    <string name="no_time_limit">● No time limit</string>
    <string name="arcade_help_text_2">Find all matching cards to complete the board</string>
    <string name="select_stage">Select Stage</string>
    <string name="stage_i">I</string>
    <string name="selcet_challenge">Select Challenge :</string>
    <string name="challenge_c1">c1</string>
    <string name="progress">Progress : </string>
    <string name="zero">0</string>
    <string name="percentage_complete">% completed</string>
    <string name="next">Next</string>
    <string name="objective">Objective :</string>
    <string name="board_details">Board Details : </string>
    <string name="time_trial">Time-Trial</string>
    <string name="start_game">Start Game</string>
    <string name="best_score">Best Score : </string>
    <string name="share">Share</string>
    <string name="oh_no">Oh No!</string>
    <string name="buy_powers">Buy Powers</string>
    <string name="you_lose">You lose.</string>
    <string name="skip_symbol"><![CDATA[>>]]></string>
    <string name="next_board">Next board</string>
    <string name="time_trial_help_text_1">Time bound game</string>
    <string name="time_trial_help_text_2">Find a card pair before the timer goes out to reset the timer</string>
    <string name="time_trial_help_text_3">If timer goes out : \na. Random card pair(s) are replaced\nb. Random card pair(s) are swapped</string>


</resources>
