<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_blue_home"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/get_ad_free_version"
        android:textColor="@color/white"
        android:textSize="22sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#09FAFAFA"
        android:orientation="vertical"
        android:padding="11dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            >
            <RelativeLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/background_white_09"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:background="@drawable/img_remove_ads_big"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/remove_these_annoying_things_now"
                    android:gravity="center"
                    android:textColor="#FAFFFF00"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvRemoveAdsPrice"
                    android:text="@string/at_just_45_inr"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            >
            <RelativeLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/background_white_09"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingEnd="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingStart="20dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="6dp">
                    <TextView
                        android:id="@+id/btnRemoveAds"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:text="@string/remove_ads"
                        android:textColor="@color/white"
                        android:background="@drawable/btn_white_09_rectangle"
                        />

                </LinearLayout>

                <TextView
                    android:id="@+id/btnShowAd"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:clickable="true"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/continue_playing_with_ads"
                    android:background="@drawable/btn_white_09_rectangle"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            />
    </LinearLayout>

</LinearLayout>